# claude-setup

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-27-phase1-core-and-skills.md  2026-06-27-phase2-workflow-engine.md
docs/superpowers/specs/: 2026-06-27-claude-engineering-os-architecture.md
src/: error.rs  lib.rs  main.rs
src/cli/: git.rs  install.rs  memory.rs  mod.rs  verify.rs  workflow.rs
src/config/: claude_md.rs  mod.rs  paths.rs  settings.rs  templates.rs
src/git/: branch.rs  commit.rs  mod.rs  review.rs
src/hooks/: definitions.rs  mod.rs
src/memory/: mod.rs  store.rs
src/skills/: builtin.rs  installer.rs  manifest.rs  mod.rs  registry.rs  search.rs
src/verification/: config.rs  mod.rs  pipeline.rs
src/workflows/: definition.rs  engine.rs  mod.rs  tracker.rs
src/workflows/builtin/: bug-fix.yaml  feature-dev.yaml  mod.rs  refactor.yaml
templates/: CLAUDE.md.template  settings.json.template
tests/: cli_install.rs  cli_memory.rs  cli_verify.rs  cli_workflow.rs  config_claude_md.rs  config_paths.rs  config_settings.rs  git_commit.rs  skills_manifest.rs  skills_search.rs  verify_pipeline.rs  workflows_definition.rs  workflows_engine.rs  workflows_tracker.rs
