[package]
name = "claude-engineering-os"
version = "0.1.0"
edition = "2021"
description = "A reusable engineering platform that improves every Claude Code session"
license = "MIT"
readme = "README.md"

[[bin]]
name = "claude-eng"
path = "src/main.rs"

[lib]
name = "claude_eng"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
git2 = "0.19"
tempfile = "3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
include_dir = "0.7"
urlencoding = "2"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
